client/src/discovery-syntax/DiscoverySyntaxParser.ts
// Generated from ./src/discovery-syntax/DiscoverySyntax.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { DiscoverySyntaxListener } from "./DiscoverySyntaxListener";

export class DiscoverySyntaxParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly WS = 9;
	public static readonly EQ = 10;
	public static readonly MEMBERS = 11;
	public static readonly NOTMEMBERS = 12;
	public static readonly STATUS = 13;
	public static readonly VERSION = 14;
	public static readonly PROPERTIES = 15;
	public static readonly TYPE = 16;
	public static readonly MIN = 17;
	public static readonly MAX = 18;
	public static readonly SOME = 19;
	public static readonly ONLY = 20;
	public static readonly MININCLUSIVE = 21;
	public static readonly MAXINCLUSIVE = 22;
	public static readonly MINEXCLUSIVE = 23;
	public static readonly MAXEXCLUSIVE = 24;
	public static readonly SUBCLASS = 25;
	public static readonly EQUIVALENTTO = 26;
	public static readonly DISJOINT = 27;
	public static readonly SUBPROPERTY = 28;
	public static readonly INVERSE = 29;
	public static readonly DOMAIN = 30;
	public static readonly RANGE = 31;
	public static readonly TARGETCLASS = 32;
	public static readonly EXACTLY = 33;
	public static readonly AND = 34;
	public static readonly INTEGER = 35;
	public static readonly DOUBLE = 36;
	public static readonly DIGIT = 37;
	public static readonly OR = 38;
	public static readonly NOT = 39;
	public static readonly NAME = 40;
	public static readonly DESCRIPTION = 41;
	public static readonly CODE = 42;
	public static readonly SCHEME = 43;
	public static readonly PNAME_NS = 44;
	public static readonly PN_PREFIX = 45;
	public static readonly PN_CHARS_BASE = 46;
	public static readonly PN_CHARS_U = 47;
	public static readonly PN_CHARS = 48;
	public static readonly IRIREF = 49;
	public static readonly UCHAR = 50;
	public static readonly PNAME_LN = 51;
	public static readonly PN_LOCAL = 52;
	public static readonly PLX = 53;
	public static readonly PERCENT = 54;
	public static readonly ECHAR = 55;
	public static readonly QUOTED_STRING = 56;
	public static readonly STRING_LITERAL_QUOTE = 57;
	public static readonly STRING_LITERAL_SINGLE_QUOTE = 58;
	public static readonly PIPED_STRING = 59;
	public static readonly PN_LOCAL_ESC = 60;
	public static readonly HEX = 61;
	public static readonly RULE_concept = 0;
	public static readonly RULE_directive = 1;
	public static readonly RULE_prefixID = 2;
	public static readonly RULE_conceptPredicateObjectList = 3;
	public static readonly RULE_annotation = 4;
	public static readonly RULE_predicateIri = 5;
	public static readonly RULE_scheme = 6;
	public static readonly RULE_type = 7;
	public static readonly RULE_version = 8;
	public static readonly RULE_axiom = 9;
	public static readonly RULE_properties = 10;
	public static readonly RULE_membership = 11;
	public static readonly RULE_members = 12;
	public static readonly RULE_notmembers = 13;
	public static readonly RULE_target = 14;
	public static readonly RULE_predicateList = 15;
	public static readonly RULE_minInclusive = 16;
	public static readonly RULE_maxInclusive = 17;
	public static readonly RULE_minExclusive = 18;
	public static readonly RULE_maxExclusive = 19;
	public static readonly RULE_status = 20;
	public static readonly RULE_subclassOf = 21;
	public static readonly RULE_equivalentTo = 22;
	public static readonly RULE_subpropertyOf = 23;
	public static readonly RULE_inverseOf = 24;
	public static readonly RULE_domain = 25;
	public static readonly RULE_range = 26;
	public static readonly RULE_classExpression = 27;
	public static readonly RULE_intersection = 28;
	public static readonly RULE_subExpression = 29;
	public static readonly RULE_union = 30;
	public static readonly RULE_complement = 31;
	public static readonly RULE_iri = 32;
	public static readonly RULE_literal = 33;
	public static readonly RULE_propertyRestriction = 34;
	public static readonly RULE_some = 35;
	public static readonly RULE_only = 36;
	public static readonly RULE_propertyIri = 37;
	public static readonly RULE_exactCardinality = 38;
	public static readonly RULE_rangeCardinality = 39;
	public static readonly RULE_minCardinality = 40;
	public static readonly RULE_maxCardinality = 41;
	public static readonly RULE_classOrDataType = 42;
	public static readonly RULE_name = 43;
	public static readonly RULE_description = 44;
	public static readonly RULE_code = 45;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"concept", "directive", "prefixID", "conceptPredicateObjectList", "annotation", 
		"predicateIri", "scheme", "type", "version", "axiom", "properties", "membership", 
		"members", "notmembers", "target", "predicateList", "minInclusive", "maxInclusive", 
		"minExclusive", "maxExclusive", "status", "subclassOf", "equivalentTo", 
		"subpropertyOf", "inverseOf", "domain", "range", "classExpression", "intersection", 
		"subExpression", "union", "complement", "iri", "literal", "propertyRestriction", 
		"some", "only", "propertyIri", "exactCardinality", "rangeCardinality", 
		"minCardinality", "maxCardinality", "classOrDataType", "name", "description", 
		"code",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'.'", "'@prefix'", "';'", "'['", "']'", "','", "'('", "')'", 
		undefined, "'='",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, "WS", "EQ", "MEMBERS", "NOTMEMBERS", "STATUS", "VERSION", 
		"PROPERTIES", "TYPE", "MIN", "MAX", "SOME", "ONLY", "MININCLUSIVE", "MAXINCLUSIVE", 
		"MINEXCLUSIVE", "MAXEXCLUSIVE", "SUBCLASS", "EQUIVALENTTO", "DISJOINT", 
		"SUBPROPERTY", "INVERSE", "DOMAIN", "RANGE", "TARGETCLASS", "EXACTLY", 
		"AND", "INTEGER", "DOUBLE", "DIGIT", "OR", "NOT", "NAME", "DESCRIPTION", 
		"CODE", "SCHEME", "PNAME_NS", "PN_PREFIX", "PN_CHARS_BASE", "PN_CHARS_U", 
		"PN_CHARS", "IRIREF", "UCHAR", "PNAME_LN", "PN_LOCAL", "PLX", "PERCENT", 
		"ECHAR", "QUOTED_STRING", "STRING_LITERAL_QUOTE", "STRING_LITERAL_SINGLE_QUOTE", 
		"PIPED_STRING", "PN_LOCAL_ESC", "HEX",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(DiscoverySyntaxParser._LITERAL_NAMES, DiscoverySyntaxParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return DiscoverySyntaxParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "DiscoverySyntax.g4"; }

	// @Override
	public get ruleNames(): string[] { return DiscoverySyntaxParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return DiscoverySyntaxParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(DiscoverySyntaxParser._ATN, this);
	}
	// @RuleVersion(0)
	public concept(): ConceptContext {
		let _localctx: ConceptContext = new ConceptContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, DiscoverySyntaxParser.RULE_concept);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 95;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 0, this._ctx);
			while (_alt !== 1 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1 + 1) {
					{
					{
					this.state = 92;
					this.directive();
					}
					}
				}
				this.state = 97;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 0, this._ctx);
			}
			this.state = 98;
			this.iri();
			this.state = 99;
			this.conceptPredicateObjectList();
			this.state = 100;
			this.match(DiscoverySyntaxParser.T__0);
			this.state = 101;
			this.match(DiscoverySyntaxParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public directive(): DirectiveContext {
		let _localctx: DirectiveContext = new DirectiveContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, DiscoverySyntaxParser.RULE_directive);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 103;
			this.prefixID();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public prefixID(): PrefixIDContext {
		let _localctx: PrefixIDContext = new PrefixIDContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, DiscoverySyntaxParser.RULE_prefixID);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 105;
			this.match(DiscoverySyntaxParser.T__1);
			this.state = 106;
			this.match(DiscoverySyntaxParser.PNAME_NS);
			this.state = 107;
			this.match(DiscoverySyntaxParser.IRIREF);
			this.state = 108;
			this.match(DiscoverySyntaxParser.T__0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public conceptPredicateObjectList(): ConceptPredicateObjectListContext {
		let _localctx: ConceptPredicateObjectListContext = new ConceptPredicateObjectListContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, DiscoverySyntaxParser.RULE_conceptPredicateObjectList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 116;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				{
				this.state = 110;
				this.annotation();
				}
				break;

			case 2:
				{
				this.state = 111;
				this.predicateIri();
				}
				break;

			case 3:
				{
				this.state = 112;
				this.axiom();
				}
				break;

			case 4:
				{
				this.state = 113;
				this.properties();
				}
				break;

			case 5:
				{
				this.state = 114;
				this.membership();
				}
				break;

			case 6:
				{
				this.state = 115;
				this.predicateList();
				}
				break;
			}
			this.state = 129;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === DiscoverySyntaxParser.T__2) {
				{
				{
				this.state = 118;
				this.match(DiscoverySyntaxParser.T__2);
				this.state = 125;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 2, this._ctx) ) {
				case 1:
					{
					this.state = 119;
					this.annotation();
					}
					break;

				case 2:
					{
					this.state = 120;
					this.predicateIri();
					}
					break;

				case 3:
					{
					this.state = 121;
					this.axiom();
					}
					break;

				case 4:
					{
					this.state = 122;
					this.properties();
					}
					break;

				case 5:
					{
					this.state = 123;
					this.membership();
					}
					break;

				case 6:
					{
					this.state = 124;
					this.predicateList();
					}
					break;
				}
				}
				}
				this.state = 131;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public annotation(): AnnotationContext {
		let _localctx: AnnotationContext = new AnnotationContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, DiscoverySyntaxParser.RULE_annotation);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 137;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case DiscoverySyntaxParser.NAME:
				{
				this.state = 132;
				this.name();
				}
				break;
			case DiscoverySyntaxParser.DESCRIPTION:
				{
				this.state = 133;
				this.description();
				}
				break;
			case DiscoverySyntaxParser.CODE:
				{
				this.state = 134;
				this.code();
				}
				break;
			case DiscoverySyntaxParser.VERSION:
				{
				this.state = 135;
				this.version();
				}
				break;
			case DiscoverySyntaxParser.IRIREF:
			case DiscoverySyntaxParser.PNAME_LN:
				{
				this.state = 136;
				this.propertyIri();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 139;
			this.match(DiscoverySyntaxParser.QUOTED_STRING);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public predicateIri(): PredicateIriContext {
		let _localctx: PredicateIriContext = new PredicateIriContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, DiscoverySyntaxParser.RULE_predicateIri);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 145;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case DiscoverySyntaxParser.SCHEME:
				{
				this.state = 141;
				this.scheme();
				}
				break;
			case DiscoverySyntaxParser.TYPE:
				{
				this.state = 142;
				this.type();
				}
				break;
			case DiscoverySyntaxParser.STATUS:
				{
				this.state = 143;
				this.status();
				}
				break;
			case DiscoverySyntaxParser.TARGETCLASS:
				{
				this.state = 144;
				this.target();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 147;
			this.iri();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public scheme(): SchemeContext {
		let _localctx: SchemeContext = new SchemeContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, DiscoverySyntaxParser.RULE_scheme);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 149;
			this.match(DiscoverySyntaxParser.SCHEME);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public type(): TypeContext {
		let _localctx: TypeContext = new TypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, DiscoverySyntaxParser.RULE_type);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 151;
			this.match(DiscoverySyntaxParser.TYPE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public version(): VersionContext {
		let _localctx: VersionContext = new VersionContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, DiscoverySyntaxParser.RULE_version);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 153;
			this.match(DiscoverySyntaxParser.VERSION);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public axiom(): AxiomContext {
		let _localctx: AxiomContext = new AxiomContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, DiscoverySyntaxParser.RULE_axiom);
		try {
			this.state = 161;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case DiscoverySyntaxParser.SUBCLASS:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 155;
				this.subclassOf();
				}
				break;
			case DiscoverySyntaxParser.EQUIVALENTTO:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 156;
				this.equivalentTo();
				}
				break;
			case DiscoverySyntaxParser.SUBPROPERTY:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 157;
				this.subpropertyOf();
				}
				break;
			case DiscoverySyntaxParser.INVERSE:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 158;
				this.inverseOf();
				}
				break;
			case DiscoverySyntaxParser.DOMAIN:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 159;
				this.domain();
				}
				break;
			case DiscoverySyntaxParser.RANGE:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 160;
				this.range();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public properties(): PropertiesContext {
		let _localctx: PropertiesContext = new PropertiesContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, DiscoverySyntaxParser.RULE_properties);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 163;
			this.match(DiscoverySyntaxParser.PROPERTIES);
			this.state = 164;
			this.match(DiscoverySyntaxParser.T__3);
			this.state = 166;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === DiscoverySyntaxParser.IRIREF || _la === DiscoverySyntaxParser.PNAME_LN) {
				{
				this.state = 165;
				this.propertyRestriction();
				}
			}

			this.state = 172;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 8, this._ctx);
			while (_alt !== 1 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1 + 1) {
					{
					{
					this.state = 168;
					this.match(DiscoverySyntaxParser.T__2);
					this.state = 169;
					this.propertyRestriction();
					}
					}
				}
				this.state = 174;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 8, this._ctx);
			}
			this.state = 175;
			this.match(DiscoverySyntaxParser.T__4);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public membership(): MembershipContext {
		let _localctx: MembershipContext = new MembershipContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, DiscoverySyntaxParser.RULE_membership);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 177;
			this.members();
			this.state = 182;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 9, this._ctx);
			while (_alt !== 1 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1 + 1) {
					{
					{
					this.state = 178;
					this.match(DiscoverySyntaxParser.T__2);
					this.state = 179;
					this.notmembers();
					}
					}
				}
				this.state = 184;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 9, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public members(): MembersContext {
		let _localctx: MembersContext = new MembersContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, DiscoverySyntaxParser.RULE_members);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 185;
			this.match(DiscoverySyntaxParser.MEMBERS);
			this.state = 186;
			this.match(DiscoverySyntaxParser.T__3);
			this.state = 188;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === DiscoverySyntaxParser.IRIREF || _la === DiscoverySyntaxParser.PNAME_LN) {
				{
				this.state = 187;
				this.classExpression();
				}
			}
